# rag_chatbot

./: pyproject.toml
rag_chatbot/: pdf_chatbot.py
